ckanext/datacity/fanstatic/datacity-theme.css
body {
    font-family: 'Arimo', Tahoma, "Helvetica Neue", Arial, Helvetica, sans-serif;
    background: initial;
}

.masthead .nav > li > a {
    font-size: 16px;
    font-weight: bold;
}

.homepage .module-search .module-content .heading {
    margin-top: 70px;
    margin-bottom: 70px;
    margin-left: 25%;
    margin-right: 25%;
    font-size: 3em;
    line-height: initial;
    text-align: center;
    background-color: rgba(255,255,255,0.5);
    border-radius: 10px;
    width: 50%;
    padding: 20px;
}

.homepage .module-search {
    padding: 0;
}

.homepage .module-search .module-content {
    background-color: initial;
    padding-bottom: 120px;
}

.box {
    border: 0;
    box-shadow: initial;
    background-color: initial;
}

.module-search .box {
    background-color: initial;
}

.homepage .module-search {
    background-color: initial;
}

.search-by-cat {
    padding: 10px 0;
	margin-top: 0;
	-webkit-border-radius: 0 0 3px 3px;
	-moz-border-radius: 0 0 3px 3px;
	border-radius: 0 0 3px 3px;
}

@media (min-width: 768px) {
    .search-by-cat {
        padding: 10px 105px;
    }
}

@media (min-width: 992px) {
    .search-by-cat {
        padding: 10px 190px;
    }
}

@media (min-width: 1200px) {
    .search-by-cat {
        padding: 10px 320px;
    }
}

.search-by-cat h3{
    margin-top: 0;
    margin-bottom: 7px;
    font-size: 24px;
    line-height: 40px;
    text-align: center;
}

.surrey-media-grid {
	margin: 0;
	list-style: none;
	padding-bottom: 15px;
}

.surrey-media-grid:before, .surrey-media-grid:after {
	display: table;
	content: "";
	line-height: 0;
}

.surrey-media-grid:after {
	clear: both;
}

.surrey-media-item {
	position: relative;
	width: 125px;
	padding: 10px 10px 10px 13px;
	text-align: center;
	height: 125px;
}

.surrey-media-item span {
	display:block;
    text-align: center;
    font-size: 16px;
    font-weight: bold;
}

.surrey-media-item img {
	margin:7px 0;
}

ul.surrey-media-grid {
    margin: 0;
    padding: 0;
}

.SectionTitle {
    font-size: 16px;
    color: #1D2F3B;
    line-height: 26px;
    position: relative;
    display: inline-block;
    vertical-align: middle;
    text-transform: uppercase;
    font-weight: normal;
    margin: 0 0 50px 0;
}

.SectionTitle:after {
    content: '';
    display: block;
    position: absolute;
    bottom: -5px;
    width: 100%;
    height: 3px;
    background-color: #D0021B;
}

.module-heading {
    background-color: initial;
    border: initial;
    font-size: 1.5em;
    margin-bottom: 1em;
}

h2.module-heading span {
    display: inline-block;
    padding-bottom: 5px;
    border-bottom: 3px solid #7E8489;
}

.filters h2.module-heading span {
    border-bottom: 3px solid #D0021B;
}

ul.nav-facet li.nav-item span {
    font-size: 1.1em;
}

ul.nav-facet li.nav-item {
    border: 0;
}

.module-footer {
    border: 0;
    margin-bottom: 1em;
}

footer.site-footer .attribution strong {
    font-weight: normal;
}

.wrapper {
    border: 0;
    box-shadow: initial;
}

[role=main] {
    background: initial;
    background-color: #fff;
}

.media-grid {
    background: initial;
    border: initial;
}

.module-heading i.fa-info-circle {
    display: none;
}

div#content.container .row.wrapper {
    border-top: 1px solid #dddddd;
}

.module-content.sidebar-helper {
    color: #7E8489;
}

.page-header {
    background-color: initial;
}

.context-info .image img {
    max-width: 200px;
}

.toolbar .breadcrumb a {
    color: #505050;
}

.masthead .logo img {
    max-height: 80px;
}

form.lang-select label {
    font-weight: normal;
}

